# advent-of-code

./: .gitignore  README.md
2021/1/: 2.py
2021/2/: 2.py
2021/3/: 2.py
2021/4/: main.py
2021/d1/: 1.py
2021/d2/: 1.py
2021/d3/: 1.py  2.py
2021/d4/: main.py
2021/d4/src/: main.rs
2021/d5/: main.py
2021/d5/src/: main.rs
2021/d6/: Cargo.toml  main.py
2021/d6/benches/: d6.rs
2021/d6/src/: lib.rs  main.rs
2021/python/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py
2021/rust/: Cargo.toml  README.md  gen_projects.py
2021/rust/benches/: d01.rs  d02.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs
2021/rust/d01/src/: lib.rs  main.rs
2021/rust/d02/src/: lib.rs  main.rs
2021/rust/d04/: Cargo.toml
2021/rust/d04/src/: lib.rs  main.rs
2021/rust/d05/: Cargo.toml
2021/rust/d05/src/: lib.rs  main.rs
2021/rust/d06/: Cargo.toml
2021/rust/d06/src/: lib.rs  main.rs
2021/rust/d07/: Cargo.toml
2021/rust/d07/src/: lib.rs  main.rs
2021/rust/d08/src/: lib.rs  main.rs
2021/rust/d09/src/: lib.rs  main.rs
2021/rust/d10/src/: lib.rs  main.rs
2021/rust/d11/src/: lib.rs  main.rs
2021/rust/d12/src/: main.rs
2021/rust/d13/src/: lib.rs  main.rs
2021/rust/d14/src/: lib.rs  main.rs
2021/rust/d15/src/: main.rs
2021/rust/d16/src/: main.rs
2021/rust/d17/src/: main.rs
2021/rust/d18/src/: main.rs
2021/rust/d19/src/: main.rs
2021/rust/d20/src/: main.rs
2021/rust/d21/src/: main.rs
2021/rust/d22/src/: main.rs
2021/rust/d23/src/: main.rs
2021/rust/d24/src/: main.rs
2021/rust/d25/src/: main.rs
4/: main.py
