[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "d01",
    "d02",
    "d04",
    "d05",
    "d06",
    "d07",
    "d08",
    "d09",
    "d10",
    "d11",
    "d12",
    "d13",
    "d14",
    "d15",
    "d16",
    "d17",
    "d18",
    "d19",
    "d20",
    "d21",
    "d22",
    "d23",
    "d24",
    "d25",
]

[dependencies]
d01 = { path = "d01" }
d02 = { path = "d02" }
d04 = { path = "d04" }
d05 = { path = "d05" }
d06 = { path = "d06" }
d07 = { path = "d07" }
d08 = { path = "d08" }
d09 = { path = "d09" }
d10 = { path = "d10" }
d11 = { path = "d11" }
d12 = { path = "d12" }
d13 = { path = "d13" }
d14 = { path = "d14" }
d15 = { path = "d15" }
d16 = { path = "d16" }
d17 = { path = "d17" }
d18 = { path = "d18" }
d19 = { path = "d19" }
d20 = { path = "d20" }
d21 = { path = "d21" }
d22 = { path = "d22" }
d23 = { path = "d23" }
d24 = { path = "d24" }
d25 = { path = "d25" }

[dev-dependencies]
criterion = "*"

[[bin]]
name = "d01"
path = "d01/src/main.rs"

[[bench]]
name = "d01"
harness = false

[[bin]]
name = "d02"
path = "d02/src/main.rs"

[[bench]]
name = "d02"
harness = false

[[bin]]
name = "d04"
path = "d04/src/main.rs"

[[bench]]
name = "d04"
harness = false

[[bin]]
name = "d05"
path = "d05/src/main.rs"

[[bench]]
name = "d05"
harness = false

[[bin]]
name = "d06"
path = "d06/src/main.rs"

[[bench]]
name = "d06"
harness = false

[[bin]]
name = "d07"
path = "d07/src/main.rs"

[[bench]]
name = "d07"
harness = false

[[bin]]
name = "d08"
path = "d08/src/main.rs"

[[bench]]
name = "d08"
harness = false

[[bin]]
name = "d09"
path = "d09/src/main.rs"

[[bench]]
name = "d09"
harness = false

[[bin]]
name = "d10"
path = "d10/src/main.rs"

[[bench]]
name = "d10"
harness = false

[[bin]]
name = "d11"
path = "d11/src/main.rs"

[[bench]]
name = "d11"
harness = false

[[bin]]
name = "d12"
path = "d12/src/main.rs"

[[bench]]
name = "d12"
harness = false

[[bin]]
name = "d13"
path = "d13/src/main.rs"

[[bench]]
name = "d13"
harness = false

[[bin]]
name = "d14"
path = "d14/src/main.rs"

[[bench]]
name = "d14"
harness = false

[[bin]]
name = "d15"
path = "d15/src/main.rs"

[[bench]]
name = "d15"
harness = false

[[bin]]
name = "d16"
path = "d16/src/main.rs"

[[bench]]
name = "d16"
harness = false

[[bin]]
name = "d17"
path = "d17/src/main.rs"

[[bench]]
name = "d17"
harness = false

[[bin]]
name = "d18"
path = "d18/src/main.rs"

[[bench]]
name = "d18"
harness = false

[[bin]]
name = "d19"
path = "d19/src/main.rs"

[[bench]]
name = "d19"
harness = false

[[bin]]
name = "d20"
path = "d20/src/main.rs"

[[bench]]
name = "d20"
harness = false

[[bin]]
name = "d21"
path = "d21/src/main.rs"

[[bench]]
name = "d21"
harness = false

[[bin]]
name = "d22"
path = "d22/src/main.rs"

[[bench]]
name = "d22"
harness = false

[[bin]]
name = "d23"
path = "d23/src/main.rs"

[[bench]]
name = "d23"
harness = false

[[bin]]
name = "d24"
path = "d24/src/main.rs"

[[bench]]
name = "d24"
harness = false

[[bin]]
name = "d25"
path = "d25/src/main.rs"

[[bench]]
name = "d25"
harness = false
